update field name url Link component

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,8 +16,8 @@
         <twig:Navbar
             links="{{ 
                 [
-                    { 'title':'Accueil', 'href':'app_test' },
-                    { 'title':'Contact', 'href':'app_contact' },
+                    { 'title':'Accueil', 'url':'app_test' },
+                    { 'title':'Contact', 'url':'app_contact' },
                 ]
             }}"
         />
