--- a/templates/components/Navbar.html.twig
+++ b/templates/components/Navbar.html.twig
@@ -5,7 +5,7 @@
         <li class="nav-item">
             <twig:Link 
                 title="{{ link.title }}"
-                href="{{ link.href }}"
+                url="{{ link.url }}"
             />
         </li>
         {% endfor %}
