--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -17,7 +17,7 @@ nav {
     display: flex;
     flex-wrap: wrap;
     /* justify-content: center; */
-    align-items: center;
+    /* align-items: center; */
     gap: 20px;
 }
 .card {
