add search bar ajax to find articles

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,16 +13,25 @@
         {% endblock %}
     </head>
     <body>
-        <twig:Navbar
+        <header>
+            <twig:Navbar
             links="{{ 
                 [
                     { 'title':'Accueil', 'url':'app_test' },
                     { 'title':'Contact', 'url':'app_contact' },
-                ]
-            }}"
-        />
+                    ]
+                }}"
+                />
+            </header>
         <main>
+            <twig:SearchBar
+                name="searchArticles"
+                label="Rechercher des articles..."
+            />
             {% block body %}{% endblock %}
         </main>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <script src="{{ asset('js/script.js' )}}"></script>
     </body>
 </html>
