--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+h1 {
+    margin-top: 20px;
+}
+
 main {
     min-height: 100vh;
     padding: 20px 80px;
@@ -16,8 +20,6 @@ nav {
 .cards {
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: center; */
-    /* align-items: center; */
     gap: 20px;
 }
 .card {
