--- a/templates/components/SearchBar.html.twig
+++ b/templates/components/SearchBar.html.twig
@@ -1,6 +1,6 @@
 <div id="searchBarContainer" class="searchBar-container">
     <form id="searchBar" action="">
         <label for="{{ name }}">{{ label }}</label>
-        <input class="form-control" type="text" name="{{ name }}" id="{{ name }}" placeholder="...">
+        <input class="form-control" type="text" name="{{ name }}" id="{{ name }}" placeholder="">
     </form>
 </div>
