fix css : floating label (bs)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
         <main>
             <twig:SearchBar
                 name="searchArticles"
-                label="Rechercher des articles..."
+                label="Rechercher des articles"
             />
             {% block body %}{% endblock %}
         </main>
