--- a/templates/components/SearchBar.html.twig
+++ b/templates/components/SearchBar.html.twig
@@ -1,6 +1,8 @@
 <div id="searchBarContainer" class="searchBar-container">
     <form id="searchBar" action="">
-        <label for="{{ name }}">{{ label }}</label>
-        <input class="form-control" type="text" name="{{ name }}" id="{{ name }}" placeholder="">
+        <div class="form-floating">
+            <input class="form-control" type="text" name="{{ name }}" id="{{ name }}" placeholder="">
+            <label for="{{ name }}">{{ label }}</label>
+        </div>
     </form>
 </div>
