--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -34,6 +34,10 @@ nav {
     height: 100%;
 }
 
+.btn {
+    margin: 10px;
+}
+
 @media(max-width: 733px) {
     main {
         padding: 20px 20px;
